kubernetes/manifests/client-service.yml
# client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: blog-app
spec:
  selector:
    app: client
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
  type: LoadBalancer
