kubernetes/manifests/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
