kubernetes/manifests/server-service.yml
# server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: blog-app
spec:
  selector:
    app: server
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer
